# rust-axum-template

./: .env  .gitattributes  AGENTS.md  Cargo.toml
assets/static/: script.js  style.css
assets/templates/: home.html  layout.html  login.html  nav.html  nav_auth_spacer.html  setup.html  user_delete_confirm.html  users.html
migrations/: 20260218120000_users.sql  20260630000000_users_name_nocase_unique.sql
src/: csrf.rs  error.rs  main.rs  security_headers.rs  users.rs
