[package]
name = "rust-axum-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie", "form"] }
mime = "0.3.17"
minijinja = "2.14.0"
minijinja-embed = "2.14.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[build-dependencies]
minijinja-embed = "2.14.0"
