[package]
name = "rust-axum-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie", "form"] }
dotenvy = "0.15.7"
mime = "0.3.17"
minijinja = "2.21.0"
minijinja-embed = "2.21.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[build-dependencies]
minijinja-embed = "2.21.0"
